# lbt

./: LLVMToolchainCpu0.epub  Makefile  Makefile~  README.md  about.html  check.sh  clang-tools.html  clang.html  clean.sh  genindex.html  index.html  lib.html  lld.html  lldb.html  objects.inv  opt.html  pocl.html  riscv.html  rungenexample.sh  search.html  searchindex.js  status
Fig/: compiler-rt-diff.patch  lbt.gv
Fig/about/: mywork_1.gv
Fig/lib/: compiler-rt-dep-short.gv  compiler-rt-dep.gv  lib.gv  lib.odg
Fig/lld/: .~lock.dynamiclinker.odg#  dynamiclinker.odg
Fig/opt/: llvm-link.gv  llvm-link.odg
Fig/pocl/: opencl.gv
Fig/riscv/: AnLLVMBasedNPUCompiler.key  gdb.gv  little-endian.key  toolchain.gv
_sources/: about.rst.txt  about.txt  clang.rst.txt  index.rst.txt  index.txt  lib.rst.txt  lib.txt  lld.rst.txt  lld.txt  opt.rst.txt  opt.txt  pocl.rst.txt  riscv.rst.txt
_static/: documentation_options.js
exlbt/: build-cpu0-lbt.sh  compiler-rt  newlib-cpu0.sh  newlib.patch
exlbt/clang/: Targets.cpp
exlbt/clang-tools/: install-llvm.sh  install-llvm14.sh  loop-test.cpp  test1.cpp  vector-dsl.cpp  vector-dsl.h
exlbt/compiler-rt-12.x/: Makefile  Makefile.mips-clang
exlbt/compiler-rt-3.5/: Makefile  Makefile.mips-clang
exlbt/elf2hex/: CMakeLists.txt  LLVMBuild.txt  elf2hex-dlinker.h  elf2hex.cpp  elf2hex.h
exlbt/include/: README  complex.h  fenv.h  math.h  stdio.h  stdlib.h  string.h
exlbt/input/: Common.mk  Makefile  Makefile.builtins  Makefile.builtins-2  Makefile.ch13_1  Makefile.float  Makefile.float-necessary  Makefile.float-necessary-2  Makefile.float-necessary.mips-clang  Makefile.float.mips-clang  Makefile.newlib  Makefile.printf-stdarg-2  Makefile.sanitizer  Makefile.sanitizer-printf  Makefile.sanitizer_common  Makefile.slinker  Makefile.slinker.mips-clang  build-c++_1.sh  build-ch13_1.sh  build-dlinker.sh  build-float-necessary-2.sh  build-float-necessary.sh  build-float.sh  build-hello.sh  build-mips-lld.sh  build-printf-stdarg-2.sh  build-slinker-2.sh  build-slinker.sh  builtins-cpu0.c  ch4_1_sub.cpp  ch_arm-tailcall.cpp  ch_builtins.cpp  ch_call_compilerrt_func.c  ch_dynamiclinker.cpp  ch_float.cpp  ch_float_necessary.cpp  ch_hello.c  ch_lld_staticlink.cpp  ch_lld_staticlink.h  ch_newlib.cpp  (+25 more)
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/: Makefile.am  Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128a3/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128a3u/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128b1/: Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128b3/: Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128d3/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega128d4/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega192a3u/: Makefile.am  Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256a3/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256a3b/: Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256a3bu/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256a3u/: Makefile.am  Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256c3/: Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega256d3/: Makefile.am
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega384c3/: Makefile.am  Makefile.in
exlbt/libc/avr-libc-1.8.1/avr/lib/avrxmega6/atxmega384d3/: Makefile.am
exlbt/libsoftfloat/compiler-rt/: CMakeLists.txt  Makefile  Makefile.mips-clang  build-2.sh  build.sh
exlbt/libsoftfloat/compiler-rt/builtins/: absvdi2.c  absvsi2.c  int_math.h  int_types.h
exlbt/lld/: CMakeLists.txt  ELFLinkingContext.cpp
exlbt/llvm-objdump/: elf2hex-dlinker.h  elf2hex.h  llvm-objdump.cpp
exlbt/newlib/: cpu0-cfg.h
exlbt/pocl/: dpc++.txt  pocl-install.sh  pocl.txt  test.cl
exlbt/riscv/: caller_hello.c  crt0.S  func_hello_start.s  hello_world.s  pow.cpp  riscv-linux.txt  riscv-toolchain-setup-align-andes.sh  riscv-toolchain-setup-macos-intel.sh  riscv-toolchain-setup-macos.sh  riscv-toolchain-setup.sh  riscv64-qemu-ubuntu18-run.sh  riscv64-qemu-ubuntu18.sh  riscv64-virt.ld  test.cpp  vadd-full.c  vadd1.c  vadd2.c
exlbt/sanitizer_common/: Makefile  sanitizer_common.patch  sanitizer_printf.cpp
lbdex/: gen-chapters.sh  preprocess.cpp
lbdex/Cpu0/: CMakeLists.txt  Cpu0.h  Cpu0AsmPrinter.cpp  Cpu0AsmPrinter.h  Cpu0CallingConv.td  Cpu0Config.h  Cpu0DelaySlotFiller.cpp  Cpu0ISelDAGToDAG.cpp  Cpu0ISelDAGToDAG.h  Cpu0ISelLowering.cpp  Cpu0ISelLowering.h  Cpu0InstrInfo.cpp  Cpu0InstrInfo.td  Cpu0MCInstLower.cpp  Cpu0MCInstLower.h  Cpu0MachineFunction.h  Cpu0RegisterInfo.cpp  Cpu0RegisterInfo.h  Cpu0RegisterInfo.td  Cpu0SEFrameLowering.cpp  Cpu0SEISelDAGToDAG.cpp  Cpu0SEISelLowering.cpp  Cpu0SEISelLowering.h  Cpu0SEInstrInfo.cpp  Cpu0Schedule.td  Cpu0SetChapter.h  Cpu0Subtarget.cpp  Cpu0Subtarget.h  Cpu0TargetMachine.cpp  Cpu0TargetMachine.h  LLVMBuild.txt
lbdex/input/: a.cpp  a.h  build-ch13_1.sh  build-hello.sh  build-printf-stdarg-2.sh  build-run_backend.sh  build-slinker.sh  ch11_1.cpp  ch11_1_2.cpp  ch11_2.cpp  ch12_eh.cpp  ch12_inherit.bc  ch12_inherit.cpp  ch12_swap.cpp  ch12_thread_var.bc  ch12_thread_var.cpp  ch14_eh.cpp  ch14_inherit.cpp  ch14_thread_var.cpp  ch3.cpp  ch3_2.cpp  ch4_1_1.cpp  ch4_1_2.cpp  ch4_1_3.cpp  ch4_2.cpp  ch4_2_1.cpp  ch4_2_2.cpp  ch4_3.cpp  ch4_5.cpp  ch4_6.cpp  ch6_1.cpp  ch7_1.cpp  ch7_2.cpp  ch7_2_2.cpp  ch7_3.cpp  ch7_4.cpp  ch7_5.cpp  ch7_5_2.cpp  ch8_1_1.cpp  ch8_1_2.cpp  (+32 more)
lbdex/lld/: Atoms.h  note
note/: WhatLLVMCanDoInMarvell.odp  llvm_friends.txt  note-build-libcxx-arm.txt  note_awk.txt  note_clang.txt  note_gem5.txt  note_git.txt  note_iMac.txt  note_lbt.txt  note_libc++.txt  note_lld.txt  note_lldb.txt  note_llvm.txt  note_oprofile.txt  note_polly.txt  note_regressiontest.txt  note_sphinx.txt
present/: AnLLVMBasedNPUCompiler.key  Principle_Polyhedral.odp  RiscvToolchain.key
source/: about.rst  clang-tools.rst  clang.rst  conf.py  index.rst  lib.rst  lld.rst  lldb.rst  opt.rst  pocl.rst  riscv.rst
(+1750 files in other folders)
